--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-name: The Boss, Lost in code
-markdown: kramdown
-permalink: /pages-test/blog/:year/:month/:day/:title
-theme: just-the-docs
+theme: jekyll-theme-minimal
+title: MyHomePage
+description: Bookmark this to keep an eye on my project updates!
